--- a/project 2/load.ipynb
+++ b/project 2/load.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dd57dc83",
    "metadata": {},
    "outputs": [
@@ -20,20 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Patient_Id                                  Skeleton_Features\n",
-      "158           8  [0.01672805172463768, -0.5662699523188407, 0.0...\n",
-      "500          12  [0.03123780159177354, -0.5718956396, 0.0479631...\n",
-      "396           6  [0.023674554394231464, -0.5588386275217391, 0....\n",
-      "155           8  [0.009414516641025642, -0.5693782186153847, 0....\n",
-      "321           3  [0.015847331331651126, -0.5660038876666666, 0....\n",
-      "..          ...                                                ...\n",
-      "71            4  [0.00865563444, -0.5576752849466667, 0.0242797...\n",
-      "106           6  [0.017996815525, -0.5546415622, 0.032668157291...\n",
-      "270          14  [-0.06093925460784313, -0.5421445670294118, -0...\n",
-      "435           8  [-0.009460545267441861, -0.5828924643604652, 0...\n",
-      "102           6  [0.014680226106557379, -0.5484173288196722, 0....\n",
-      "\n",
-      "[700 rows x 2 columns]\n"
+      "(700, 2)\n"
      ]
     }
    ],
@@ -42,12 +29,12 @@
     "with open(path, \"rb\") as f:\n",
     "    X = pickle.load(f)\n",
     "\n",
-    "print(X)"
+    "print(X.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "73a6b862",
    "metadata": {},
    "outputs": [
@@ -55,36 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 1. 1. 0. 1. 0. 0. 1. 1. 1. 2. 1. 0. 0. 2. 2. 1. 1. 2. 1. 1. 1. 1. 1.\n",
-      " 1. 1. 1. 0. 0. 0. 0. 1. 0. 0. 0. 1. 1. 1. 1. 0. 0. 0. 0. 2. 2. 2. 2. 1.\n",
-      " 0. 0. 1. 0. 1. 0. 0. 2. 1. 0. 0. 2. 0. 1. 1. 0. 2. 1. 0. 0. 0. 2. 1. 0.\n",
-      " 0. 0. 1. 2. 1. 2. 0. 1. 0. 0. 2. 0. 0. 2. 0. 1. 0. 0. 2. 1. 0. 2. 0. 1.\n",
-      " 2. 0. 0. 0. 1. 0. 2. 1. 0. 1. 0. 0. 0. 0. 0. 1. 0. 0. 1. 1. 1. 2. 1. 0.\n",
-      " 1. 1. 0. 2. 1. 0. 2. 1. 2. 0. 0. 2. 0. 1. 1. 0. 0. 1. 1. 0. 0. 0. 0. 2.\n",
-      " 1. 1. 2. 0. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 1. 1. 1. 1. 1. 2. 1. 1. 2.\n",
-      " 1. 1. 2. 2. 0. 1. 2. 0. 1. 2. 1. 1. 0. 1. 0. 0. 2. 2. 1. 0. 0. 0. 1. 1.\n",
-      " 1. 2. 1. 2. 0. 0. 0. 0. 0. 0. 0. 2. 0. 0. 2. 2. 0. 1. 1. 2. 1. 1. 0. 1.\n",
-      " 1. 0. 1. 1. 1. 2. 0. 0. 0. 1. 1. 0. 2. 1. 2. 0. 1. 2. 0. 2. 0. 0. 0. 1.\n",
-      " 0. 1. 2. 1. 0. 1. 0. 2. 2. 0. 0. 2. 1. 1. 0. 2. 1. 0. 1. 0. 2. 1. 0. 0.\n",
-      " 1. 0. 2. 0. 0. 0. 2. 0. 0. 2. 0. 0. 2. 1. 1. 2. 0. 0. 0. 2. 1. 0. 1. 0.\n",
-      " 1. 1. 2. 1. 0. 1. 0. 0. 0. 2. 2. 0. 1. 1. 1. 0. 1. 2. 1. 0. 1. 1. 0. 0.\n",
-      " 1. 2. 0. 1. 1. 2. 1. 2. 0. 0. 1. 1. 0. 0. 2. 1. 2. 0. 1. 0. 1. 0. 1. 1.\n",
-      " 0. 1. 1. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 1. 0. 1. 2. 0.\n",
-      " 1. 2. 2. 0. 0. 1. 2. 1. 2. 1. 1. 0. 2. 0. 1. 1. 0. 0. 0. 2. 2. 0. 1. 1.\n",
-      " 1. 2. 1. 1. 1. 2. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 2. 1. 1. 0. 2. 1. 1. 0.\n",
-      " 2. 2. 1. 1. 1. 2. 2. 2. 0. 1. 0. 1. 0. 1. 0. 1. 1. 1. 2. 1. 0. 2. 2. 0.\n",
-      " 1. 1. 0. 1. 2. 1. 0. 0. 1. 2. 0. 0. 0. 1. 2. 0. 2. 1. 1. 1. 0. 2. 0. 1.\n",
-      " 0. 0. 1. 2. 1. 1. 0. 0. 1. 2. 1. 0. 2. 1. 1. 0. 1. 1. 1. 2. 0. 2. 1. 2.\n",
-      " 0. 0. 1. 1. 1. 0. 1. 1. 0. 1. 2. 1. 1. 1. 2. 0. 1. 1. 1. 1. 0. 0. 2. 0.\n",
-      " 0. 0. 1. 1. 0. 0. 1. 1. 0. 1. 1. 0. 0. 0. 1. 0. 1. 2. 0. 1. 1. 1. 0. 2.\n",
-      " 1. 2. 1. 1. 2. 1. 0. 1. 1. 0. 0. 2. 1. 0. 1. 1. 1. 2. 1. 0. 1. 1. 1. 0.\n",
-      " 2. 2. 1. 1. 1. 2. 2. 2. 2. 1. 0. 0. 0. 1. 0. 1. 0. 2. 2. 2. 0. 2. 0. 2.\n",
-      " 1. 1. 2. 0. 1. 1. 2. 0. 0. 2. 1. 0. 2. 1. 1. 0. 0. 0. 0. 0. 2. 0. 1. 1.\n",
-      " 1. 1. 1. 2. 1. 0. 0. 1. 0. 2. 1. 0. 0. 0. 0. 1. 1. 0. 0. 0. 1. 1. 0. 1.\n",
-      " 1. 2. 0. 0. 0. 1. 1. 1. 0. 2. 1. 0. 2. 2. 0. 0. 0. 1. 1. 1. 1. 0. 1. 2.\n",
-      " 1. 0. 0. 1. 2. 1. 0. 0. 2. 2. 1. 2. 1. 0. 2. 2. 0. 1. 1. 0. 1. 2. 0. 0.\n",
-      " 1. 1. 0. 0. 0. 1. 1. 1. 1. 1. 2. 0. 2. 0. 1. 0. 1. 1. 0. 1. 0. 2. 0. 0.\n",
-      " 0. 0. 1. 0.]\n"
+      "(700,)\n"
      ]
     }
    ],
@@ -94,7 +52,7 @@
     "# load the array\n",
     "Y= np.load(\"Ytrain1.npy\")\n",
     "\n",
-    "print(Y)\n"
+    "print(Y.shape)\n"
    ]
   },
   {
@@ -110,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312_venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
